--- a/app/src/main/res/layout/linea_recycler_calendar_task.xml
+++ b/app/src/main/res/layout/linea_recycler_calendar_task.xml
@@ -34,4 +34,12 @@
 
     </LinearLayout>
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/eliminarTarea"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        app:backgroundTint="#ff0000"
+        app:srcCompat="@android:drawable/ic_delete" />
+
 </LinearLayout>
