--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -16,5 +16,9 @@
             android:id="@+id/nav_slideshow"
             android:icon="@android:drawable/ic_menu_set_as"
             android:title="@string/menu_export" />
+        <item
+            android:id="@+id/nav_explorer"
+            android:icon="?attr/actionModePasteDrawable"
+            android:title="@string/file_explorer" />
     </group>
 </menu>
