--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,4 +22,10 @@
         android:name="com.example.gestoracademico.ui.ui.slideshow.SlideshowFragment"
         android:label="@string/menu_export"
         tools:layout="@layout/fragment_slideshow" />
+
+    <fragment
+        android:id="@+id/nav_explorer"
+        android:name="com.example.gestoracademico.ui.ui.filexplorer.FileExplorerFragment"
+        android:label="@string/file_explorer"
+        tools:layout="@layout/fragment_file_explorer" />
 </navigation>
