--- a/app/src/main/res/layout/fragment_file_explorer.xml
+++ b/app/src/main/res/layout/fragment_file_explorer.xml
@@ -16,7 +16,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/recycler_view" />
+        app:layout_constraintTop_toTopOf="@+id/files_recycler_view" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/files_recycler_view"
