--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -32,7 +32,17 @@
         android:id="@+id/action_fileExporer_to_fileExporer"
         app:destination="@+id/nav_explorer"
         />
+        <action
+            android:id="@+id/action_fileExporer_to_pdfViewer"
+            app:destination="@+id/nav_pdfViewer"
+            />
     </fragment>
+
+    <fragment
+        android:id="@+id/nav_pdfViewer"
+        android:name="com.example.gestoracademico.ui.ui.pdf.PdfFragment"
+        android:label="@string/pdfViewer"
+        tools:layout="@layout/fragment_pdf" />
 
 
 
