--- a/app/src/main/res/layout/fragment_academic_template.xml
+++ b/app/src/main/res/layout/fragment_academic_template.xml
@@ -20,6 +20,12 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
         >
+            <EditText
+                    android:id="@+id/editTextCategoria"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Carpeta/Categoria"
+                    android:inputType="textMultiLine"/>
 
             <EditText
                     android:id="@+id/editTextTitle"
