--- a/app/src/main/res/layout/fragment_academic_template.xml
+++ b/app/src/main/res/layout/fragment_academic_template.xml
@@ -1,80 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<androidx.constraintlayout.widget.ConstraintLayout
+<ScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-       >
-
-    <FrameLayout
+        android:layout_height="match_parent">
+    <androidx.constraintlayout.widget.ConstraintLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".ui.ui.slideshow.templates.AcademicTemplateFragment" android:id="@+id/frameLayout2"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent">
+           >
 
-        <LinearLayout
+        <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-        >
-            <EditText
-                    android:id="@+id/editTextCategoria"
+                android:layout_height="match_parent"
+                tools:context=".ui.ui.slideshow.templates.AcademicTemplateFragment" android:id="@+id/frameLayout2"
+                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent">
+
+            <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Carpeta/Categoria"
-                    android:inputType="textMultiLine"/>
+                    android:orientation="vertical"
+            >
+                <EditText
+                        android:id="@+id/editTextCategoria"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="Carpeta/Categoria"
+                        android:inputType="textMultiLine"/>
 
-            <EditText
-                    android:id="@+id/editTextTitle"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="Título del PDF"
-                    android:inputType="text"/>
+                <EditText
+                        android:id="@+id/editTextTitle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="Título del PDF"
+                        android:inputType="text"/>
 
-            <EditText
-                    android:id="@+id/editTextSubject"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="Asignatura"
-                    android:inputType="text"/>
+                <EditText
+                        android:id="@+id/editTextSubject"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="Asignatura"
+                        android:inputType="text"/>
 
-            <EditText
-                    android:id="@+id/editTextTheme"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="Tema"
-                    android:inputType="text"/>
+                <EditText
+                        android:id="@+id/editTextTheme"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="Tema"
+                        android:inputType="text"/>
 
-            <EditText
-                    android:id="@+id/editTextDate"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="Fecha"
-                    android:inputType="date"/>
+                <EditText
+                        android:id="@+id/editTextDate"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="Fecha"
+                        android:inputType="date"/>
 
-            <EditText
-                    android:id="@+id/editTextContent"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="Contenido del PDF"
-                    android:inputType="textMultiLine"/>
-            <Button
-                    android:id="@+id/buttonGeneratePDF"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="Generar PDF"
-            />
+                <EditText
+                        android:id="@+id/editTextContent"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="Contenido del PDF"
+                        android:inputType="textMultiLine"/>
+                <Button
+                        android:id="@+id/buttonGeneratePDF"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="Generar PDF"
+                />
 
-        </LinearLayout>
+            </LinearLayout>
 
 
-    </FrameLayout>
+        </FrameLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
 
 
 
