--- a/app/src/main/res/layout/fragment_generic.xml
+++ b/app/src/main/res/layout/fragment_generic.xml
@@ -1,44 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context=".ui.ui.slideshow.templates.GenericTemplateFragment">
+<ScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                 xmlns:tools="http://schemas.android.com/tools"
+                 android:layout_width="match_parent"
+                 android:layout_height="match_parent"
+                 tools:context=".ui.ui.slideshow.templates.GenericTemplateFragment">
 
-    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-           >
-
-        <EditText
-                android:id="@+id/editTextCategoria"
+        <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Carpeta/Categoria"
-                android:inputType="textMultiLine"/>
-        <EditText
-                android:id="@+id/editTextTitle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Título del PDF"
-                android:inputType="text" />
+                android:orientation="vertical"
+               >
 
-        <EditText
-                android:id="@+id/editTextContent"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Contenido del PDF"
-                android:inputType="textMultiLine" />
-        <Button
-                android:id="@+id/buttonGeneratePDF"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="Generar PDF"/>
+            <EditText
+                    android:id="@+id/editTextCategoria"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Carpeta/Categoria"
+                    android:inputType="textMultiLine"/>
+            <EditText
+                    android:id="@+id/editTextTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Título del PDF"
+                    android:inputType="text" />
 
-    </LinearLayout>
+            <EditText
+                    android:id="@+id/editTextContent"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Contenido del PDF"
+                    android:inputType="textMultiLine" />
+            <Button
+                    android:id="@+id/buttonGeneratePDF"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="Generar PDF"/>
 
-    <!-- Botón para generar el PDF -->
+        </LinearLayout>
 
-</FrameLayout>
+        <!-- Botón para generar el PDF -->
+
+    </FrameLayout>
+
+</ScrollView>
