--- a/app/src/main/res/layout/fragment_new_task.xml
+++ b/app/src/main/res/layout/fragment_new_task.xml
@@ -50,6 +50,9 @@
         android:layout_height="46dp"
         android:ems="10"
         android:inputType="date"
+        android:focusable="false"
+        android:clickable="true"
+        android:maxLines="1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.377"
