--- a/app/src/main/res/layout/fragment_task_consulta.xml
+++ b/app/src/main/res/layout/fragment_task_consulta.xml
@@ -53,4 +53,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.046" />
+
+    <Button
+        android:id="@+id/fileButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Ver Documento"
+        android:visibility="invisible"
+        app:icon="@drawable/ic_baseline_insert_drive_file_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.067"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        app:layout_constraintVertical_bias="0.172"
+        android:autoSizeTextType="uniform"/>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
