--- a/app/src/main/res/layout/fragment_slideshow.xml
+++ b/app/src/main/res/layout/fragment_slideshow.xml
@@ -7,11 +7,11 @@
     tools:context=".ui.ui.slideshow.SlideshowFragment">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="75dp"
-        tools:context=".MainActivity">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="75dp"
+            tools:context=".MainActivity" android:id="@+id/linearLayout2">
 
         <RadioGroup
                 android:id="@+id/templateSelection"
@@ -26,7 +26,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Plantilla Genérica"
-                    app:layout_constraintEnd_toEndOf="parent" />
+                    app:layout_constraintEnd_toEndOf="parent"/>
 
             <RadioButton
                     android:id="@+id/radioAcademicTemplate"
@@ -34,15 +34,30 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Plantilla Académica"
-                    app:layout_constraintEnd_toEndOf="parent" />
+                    app:layout_constraintEnd_toEndOf="parent"/>
         </RadioGroup>
 
         <FrameLayout
                 android:id="@+id/templateContainer"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-
+                android:layout_height="525dp"/>
 
 
     </LinearLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_margin="16dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:onClick="crearNuevaTarea"
+            app:backgroundTint="#6c6766"
+            app:srcCompat="@drawable/ic_baseline_insert_drive_file_24" android:minWidth="5dp" android:minHeight="5dp"
+
+    />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
