--- a/app/src/main/res/layout/fragment_academic_template.xml
+++ b/app/src/main/res/layout/fragment_academic_template.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<FrameLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -16,7 +16,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
         >
-           
+
 
            
                 <EditText
@@ -62,41 +62,45 @@
                         android:focusable="false"
                         android:autoSizeTextType="uniform"/>
 
+            <Switch
+                android:id="@+id/createTaskWithDocument"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:autoSizeTextType="uniform"
+                android:text=" Generar Tarea" />
+
+            <EditText
+                android:id="@+id/titleTaskfromDocument"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Título de la tarea"
+                android:inputType="text"
+                android:visibility="gone"
+                android:autoSizeTextType="uniform"/>
+
+            <EditText
+                android:id="@+id/dateTaskfromDocument"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Fecha de la tarea"
+                android:inputType="date"
+                android:visibility="gone"
+                android:clickable="true"
+                android:maxLines="1"
+                android:focusable="false"
+                android:autoSizeTextType="uniform"/>
+
                 <EditText
                         android:id="@+id/editTextContent"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Contenido del PDF"
                         android:inputType="textMultiLine"
-                        android:autoSizeTextType="uniform"/>
+                        android:autoSizeTextType="uniform"
+                        android:layout_marginBottom="16dp"
+                    />
 
-                <Switch
-                    android:id="@+id/createTaskWithDocument"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:autoSizeTextType="uniform"
-                    android:text=" Generar Tarea" />
 
-                <EditText
-                    android:id="@+id/titleTaskfromDocument"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="Título de la tarea"
-                    android:inputType="text"
-                    android:visibility="invisible"
-                    android:autoSizeTextType="uniform"/>
-
-                <EditText
-                    android:id="@+id/dateTaskfromDocument"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="Fecha de la tarea"
-                    android:inputType="date"
-                    android:visibility="invisible"
-                    android:clickable="true"
-                    android:maxLines="1"
-                    android:focusable="false"
-                    android:autoSizeTextType="uniform"/>
 
           
 
@@ -106,6 +110,6 @@
 
 
 
-</RelativeLayout>
+</FrameLayout>
 
 
