--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -47,9 +47,9 @@
 
     <fragment
         android:id="@+id/nav_gallery"
-        android:name="com.example.gestoracademico.ui.ui.gallery.GalleryFragment"
+        android:name="com.example.gestoracademico.ui.ui.gallery.CalendarFragment"
         android:label="@string/menu_calendar"
-        tools:layout="@layout/fragment_gallery">
+        tools:layout="@layout/fragment_calendar">
         <action
             android:id="@+id/action_calendar_to_consultaTask"
             app:destination="@+id/nav_consultaTask"/>
