--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -47,7 +47,7 @@
 
     <fragment
         android:id="@+id/nav_gallery"
-        android:name="com.example.gestoracademico.ui.ui.gallery.CalendarFragment"
+        android:name="com.example.gestoracademico.ui.ui.calendar.CalendarFragment"
         android:label="@string/menu_calendar"
         tools:layout="@layout/fragment_calendar">
         <action
